RESOLVED FIXED165954
[EFL] Fix build break since r209907
https://bugs.webkit.org/show_bug.cgi?id=165954
Summary [EFL] Fix build break since r209907
Joonghun Park
Reported 2016-12-16 08:28:20 PST
Change the remaining TextBreakIterator to UBreakIterator in TextCheckerEfl.cpp
Attachments
Joonghun Park
Comment 1 2016-12-16 08:32:36 PST
Note You need to log in before you can comment on or make changes to this bug.