[EFL] Fix build break since r209907. Unreviewed. https://bugs.webkit.org/show_bug.cgi?id=165954

* UIProcess/efl/TextCheckerEfl.cpp: Change the remaining TextBreakIterator to UBreakIterator
(WebKit::nextWordOffset):
(WebKit::TextChecker::checkTextOfParagraph):

Canonical link: https://commits.webkit.org/183552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209919 268f45cc-cd09-0410-ab3c-d52691b4dbfc